# apps/api/openapi.json
@@ -2543,7 +2543,16 @@
     "/api/v1/organizations/{orgId}/members/me": {
       "get": {
         "operationId": "active",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "orgId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "",
@@ -2611,7 +2620,7 @@
             "bearer": []
           }
         ],
-        "summary": "Get the caller's membership in the active organization",
+        "summary": "Get the caller's own membership in an organization",
         "tags": ["Organization members"]
       }
     },
